SG.tf
 
 resource "aws_security_group" "alb_sg" {
    vpc_id = aws_vpc.main_vpc.id
    ingress  {
        from_port = 80
        to_port = 80
        protocol= "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress  {
        from_port=0
        to_port=0
        protocol=-1
        cidr_blocks =["0.0.0.0/0"]
    }
   
 }
 resource "aws_security_group" "templet_sg" {
    name = "temp_sg"
    vpc_id = aws_vpc.main_vpc.id

    ingress  {
        from_port = 80
        to_port = 80
        protocol= "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }
    ingress  {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["223.184.155.124/32"]
    }
    egress  {
        from_port=0
        to_port=0
        protocol="-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
   
 }
